--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+
+# exlude res_* files
+res_*
